connect the storyboard to the IBOutlet

--- a/Sample-UIScrollView/Base.lproj/Main.storyboard
+++ b/Sample-UIScrollView/Base.lproj/Main.storyboard
@@ -26,6 +26,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="VPh-8Y-hDd" id="aUE-Y9-vzA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
