--- a/Sample-UIScrollView/Base.lproj/Main.storyboard
+++ b/Sample-UIScrollView/Base.lproj/Main.storyboard
@@ -18,15 +18,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VPh-8Y-hDd">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VPh-8Y-hDd">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="fD7-P8-iTg">
+                                <rect key="frame" x="150" y="430" width="75" height="37"/>
+                                <color key="currentPageIndicatorTintColor" red="0.11628645209215993" green="0.26430446174785982" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="valueDidChange:forEvent:" destination="BYZ-38-t0r" eventType="valueChanged" id="YjC-TW-qP8"/>
+                                </connections>
+                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="fD7-P8-iTg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="150" id="2Ts-iQ-HUj"/>
+                            <constraint firstItem="VPh-8Y-hDd" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="A8z-D1-JWe"/>
+                            <constraint firstItem="VPh-8Y-hDd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="X5o-oN-oxq"/>
+                            <constraint firstItem="fD7-P8-iTg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fcX-1C-IvJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="VPh-8Y-hDd" secondAttribute="bottom" id="r6S-O9-1JM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fD7-P8-iTg" secondAttribute="bottom" constant="200" id="urM-6w-2gn"/>
+                            <constraint firstItem="VPh-8Y-hDd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vt1-de-HfZ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="pageControl" destination="fD7-P8-iTg" id="uYi-n1-X0f"/>
                         <outlet property="scrollView" destination="VPh-8Y-hDd" id="aUE-Y9-vzA"/>
                     </connections>
                 </viewController>
